--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -583,6 +583,13 @@ label {
   font-weight: 500;
 }
 
+@media (min-width: 1024px) {
+  .header-infos-item {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 .header-infos-item.no-border {
   border-right-style: none;
 }
