cambios en formulario

--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1686,7 +1686,7 @@ label {
 .popup form .contenedor-inputs input {
   font-family: Clashdisplay, sans-serif;
   width: 100%;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   height: 52px;
   font-size: 18px;
   line-height: 52px;
@@ -1710,6 +1710,17 @@ label {
 
 .popup form .btn-submit:hover {
   background: rgba(94, 125, 227, 0.9);
+}
+
+.iti {
+  width: 100%;
+}
+
+.iti__selected-flag {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* validacion bootrstrap */
