--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1639,13 +1639,18 @@ label {
   box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
   border-radius: 3px;
   font-family: "Montserrat", sans-serif;
-  padding: 20px;
+  padding: 10px 20px;
   text-align: center;
   width: 600px;
-
   transition: 0.3s ease all;
   transform: scale(0.7);
   opacity: 0;
+}
+
+@media (min-width: 768px) {
+  .popup {
+    padding: 20px;
+  }
 }
 
 .popup .btn-cerrar-popup {
@@ -1741,6 +1746,7 @@ label {
 /* ------------------------- */
 /* ANIMACIONES */
 /* ------------------------- */
+
 .popup.active {
   transform: scale(1);
   opacity: 1;
@@ -1854,9 +1860,14 @@ form {
   box-shadow: 0px 0px 0px 0.5px rgba(50, 50, 93, 0.1),
     0px 2px 5px 0px rgba(50, 50, 93, 0.1), 0px 1px 1.5px 0px rgba(0, 0, 0, 0.07);
   border-radius: 7px;
-  padding: 30px 40px 10px 40px;
-
+  padding: 10px;
   margin: 0 auto;
+}
+
+@media (min-width: 768px) {
+  form {
+    padding: 30px 40px 10px 40px;
+  }
 }
 
 .hidden {
