cambio en validacion de formulario

--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1725,6 +1725,7 @@ label {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  max-height: 52px;
 }
 
 /* validacion bootrstrap */
