--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1818,7 +1818,8 @@ label {
 .speaker-collection-item .speaker-image {
   width: 100%;
   height: auto;
-  transition: filter 4s ease;
+  transition: filter 2s ease;
+  /* Transición para aclarar la imagen */
 }
 
 .speaker-collection-item .speaker-content-wrapper {
@@ -1830,24 +1831,14 @@ label {
   box-sizing: border-box;
   color: #fff;
   opacity: 1;
-  background-color: transparent; /* Fondo transparente por defecto */
-  transition: transform 1s ease-in-out, background-color 1s ease-in-out;
-  transform: translateY(calc(100% - 160px)); /* Ajuste para que se vea en el fondo del bloque */
   transition: opacity 2s ease, background-color 2s ease;
+  /* Transiciones más lentas */
 }
 
 .speaker-collection-item .heading-style-h4,
 .speaker-collection-item .text-size-medium {
-  transition: opacity 4s ease;
-}
-
-.speaker-collection-item .speaker-bio-content {
-  opacity: 0;
-  visibility: hidden;
-  transition: opacity 0s, visibility 0s;
-  transition-delay: 0s;
-  overflow: hidden;
   transition: opacity 2s ease;
+  /* Transición más lenta para los textos */
 }
 
 .speaker-collection-item .speaker-bio-content {
@@ -1859,29 +1850,13 @@ label {
 }
 
 .speaker-collection-item:hover .speaker-content-wrapper {
-  transition: transform 1s ease-in-out, background-color 0.5s ease-in-out;
-  transform: translateY(0); /* Mueve el contenido a su posición original al hacer hover */
-  background-color: rgba(0, 0, 0, 0.7); /* Fondo más oscuro en hover */
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
-.speaker-collection-item:hover .speaker-bio-content {
-  opacity: 1;
-  visibility: visible;
-  transition: opacity 1s ease, visibility 1s ease;
-  transition-delay: 0.5s; /* Delay para permitir la transición */
 .speaker-collection-item:hover .speaker-content-wrapper .speaker-bio-content {
-  max-height: 500px;
+  max-height: 500px; /* Ajusta este valor según el contenido */
   opacity: 1;
 }
-
-.speaker-collection-item:not(:hover) .speaker-bio-content {
-  opacity: 0;
-  visibility: hidden;
-  transition: transform 1s ease-in-out, background-color 0.5s ease-in-out;
-  transform: translateY(calc(100% - 160px)); /* Mueve el contenido a su posición original al hacer hover */
-  /* transition-delay: 0s; Sin delay para desaparecer inmediatamente */
-}
-
 
 form {
   width: 20vw;
