--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1808,6 +1808,8 @@ label {
 
 .organizadoresImg {
   width: 100%;
+  align-items: center;
+  transform: translateX(30%);
 }
 @media (min-width: 768px) {
   .organizadoresImg {
@@ -2070,7 +2072,8 @@ button:disabled {
   .logo {
     position: relative;
     left: 0%;
-    transform: translateY(50%);
+    width: 50%;
+    transform: translateY(20%) translateX(-40%);
   }
 
   .navbar-toggler-icon {
