--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -815,10 +815,6 @@ label {
   display: grid;
 }
 
-
-
-
-
 .header-highlights-wrapper {
   width: 100%;
   height: 100%;
@@ -896,7 +892,7 @@ label {
   overflow: hidden;
 }
 .speaker-item {
-  max-height: 495px;
+  max-height: 435px;
 }
 
 .faq-accordion {
@@ -1826,7 +1822,7 @@ label {
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 20px;
+  padding: 5px 10px;
   box-sizing: border-box;
   color: #fff;
   opacity: 1;
@@ -1853,10 +1849,12 @@ label {
 }
 
 .speaker-collection-item:hover .speaker-content-wrapper .speaker-bio-content {
-  max-height: 500px; /* Ajusta este valor según el contenido */
+  max-height: 435px; /* Ajusta este valor según el contenido */
+  height: 100%;
   opacity: 1;
 }
 
+/* FORMULARIO */
 form {
   width: 20vw;
   min-width: 500px;
@@ -2079,19 +2077,31 @@ button:disabled {
 }
 
 /* cuenta regresiva */
+
 .countdown-container {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   justify-content: center;
   margin-top: 2rem;
 }
 
 .time-circle {
   position: relative;
-  width: 120px;
-  height: 120px;
+  width: 90px;
+  height: 90px;
   background: conic-gradient(#4d869c 0deg 0deg, #e6e6e6 0deg);
   border-radius: 50%;
+}
+
+@media (min-width: 1024px) {
+  .countdown-container {
+    gap: 20px;
+  }
+
+  .time-circle {
+    width: 120px;
+    height: 120px;
+  }
 }
 
 .inside-circle {
@@ -2119,8 +2129,15 @@ button:disabled {
   filter: grayscale(100%);
 }
 
-
-.disclaimer{
+.disclaimer {
   overflow: hidden;
   text-align: center;
+}
+
+/* conferencistas */
+
+@media screen and (max-width: 1200px) {
+  .speaker-collection-list {
+    grid-template-columns: 1fr 1fr;
+  }
 }
