--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -2574,3 +2574,68 @@ body
   from { transform: translateX(100%); }
   to { transform: translateX(0); }
 }
+
+
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  background: #fff;
+  border: 2px solid #4D869C;
+  border-radius: 5px;
+  z-index: 1000;
+  text-align: center;
+}
+
+.pagos{
+  padding-top: 100px;
+  padding-bottom: 40px;
+}
+
+/* Sección de Éxito */
+#success-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: 40px;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+#success-section h3 {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+#success-section p {
+  font-size: 1rem;
+  margin-top: 10px;
+}
+
+/* Animación Slide-in */
+.slide-in {
+  animation: slideIn 0.5s forwards;
+}
+
+@keyframes slideIn {
+  from { transform: translateX(100%); }
+  to { transform: translateX(0); }
+}
+
+.input-error {
+  border-color: red;
+}
+
+.error-popover {
+  background-color: red;
+  color: white;
+  padding: 4px 8px;
+  border-radius: 4px;
+  font-size: 12px;
+  z-index: 1000;
+}
