--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -2592,7 +2592,7 @@ body
   position: absolute;
   width: 100%;
   height: 100%;
-  background: url("background.jpg") no-repeat center center/cover;
+  background: url("background.webp") no-repeat center center/cover;
   z-index: -1;
 }
 
