--- a/styles/styles_2.css
+++ b/styles/styles_2.css
@@ -2705,21 +2705,20 @@ body
   transition: transform 0.5s ease-in-out;
 }
 
-
 .popup {
   position: fixed;
-  top: 50%;
-  left: 50%;
+  top: 1%;
+  left: 33.3%;
   transform: translate(-50%, -50%);
   padding: 20px;
   background: #fff;
-  border: 2px solid #4D869C;
+  border: 2px solid #4d869c;
   border-radius: 5px;
   z-index: 1000;
   text-align: center;
 }
 
-.pagos{
+.pagos {
   padding-top: 100px;
   padding-bottom: 40px;
 }
@@ -2753,8 +2752,12 @@ body
 }
 
 @keyframes slideIn {
-  from { transform: translateX(100%); }
-  to { transform: translateX(0); }
+  from {
+    transform: translateX(100%);
+  }
+  to {
+    transform: translateX(0);
+  }
 }
 
 .input-error {
