--- a/styles/styles_2.css
+++ b/styles/styles_2.css
@@ -879,7 +879,7 @@ label {
   cursor: pointer;
   justify-content: space-between;
   align-items: center;
-  padding: 1.25rem 2rem;
+  padding: 0.2rem 1rem;
   display: flex;
 }
 
@@ -2354,7 +2354,12 @@ body
 
 .section-grid {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+}
+
+@media (min-width: 1024px) {
+  .section-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 .footer-social-list {
@@ -2579,6 +2584,7 @@ body
 }
 
 .slider-container {
+  margin: 10% auto;
   position: relative;
   width: 100%;
   height: 100%;
@@ -2597,9 +2603,9 @@ body
 }
 
 .slider {
-  width: 80%;
+  width: 85%;
   max-width: 800px;
-  height: 60%;
+  height: 70%;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -2625,7 +2631,7 @@ body
   background-color: #f4f4f6;
   border-radius: 20px; /* Rounded corners */
   box-sizing: border-box;
-  padding: 30px; /* Add padding inside the image */
+  padding: 77px; /* Add padding inside the image */
 }
 
 .nav-button {
@@ -2663,6 +2669,10 @@ body
 
 /* Media Queries */
 @media (min-width: 600px) {
+  .slide img {
+    padding: 30px; /* Add padding inside the image */
+  }
+
   .nav-button {
     width: 4rem;
     height: 4rem;
@@ -2694,10 +2704,10 @@ body
     height: 5rem;
   }
   .prev-button {
-    left: 10%;
+    left: 3%;
   }
   .next-button {
-    right: 10%;
+    right: 3%;
   }
 }
 
@@ -2771,4 +2781,16 @@ body
   border-radius: 4px;
   font-size: 12px;
   z-index: 1000;
+}
+
+/* grid de FAQs y Slider */
+
+.union-grid {
+  display: grid;
+}
+
+@media (min-width: 1280px) {
+  .union-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
