--- a/styles/index.css
+++ b/styles/index.css
@@ -2793,7 +2793,6 @@ body
 }
 
 .pagos {
-  display: none;
   position: fixed;
   top: 0;
   left: 0;
@@ -2804,10 +2803,13 @@ body
   overflow-y: auto;
   transform: translateY(-100%);
   transition: transform 0.5s ease-in-out;
+  visibility: hidden; /* Ocultar inicialmente */
+  opacity: 0; /* Transparente inicialmente */
 }
 
 .pagos.active {
-  display: block;
+  visibility: visible; /* Hacer visible */
+  opacity: 1; /* Opaco */
   transform: translateY(0);
 }
 
@@ -2826,14 +2828,14 @@ body
   margin: 0;
   border: 0;
   padding: 0;
-  border-radius: 50%;
-  width: 80px;
-  height: 80px;
+  border-radius: 0.6rem;
+  width: 50px;
+  height:50px;
   position: absolute;
   top: 10px;
   right: 10px;
   font-size: 24px;
   color: white; /* Color negro para la 'X' */
-  transform: translateX(-100%); /* Mover la 'X' */
+  transform: translateX(-400%); /* Mover la 'X' */
 
 }
