--- a/styles/styles2.css
+++ b/styles/styles2.css
@@ -1769,7 +1769,6 @@ label {
 
 .speaker-collection-item .speaker-image {
   width: 100%;
-  height: auto;
   transition: filter 2s ease;
   /* Transición para aclarar la imagen */
   border-radius: 15px; /* Bordes redondeados */
@@ -1837,7 +1836,6 @@ form {
     padding: 30px 40px 10px 40px;
   }
 }
-
 
 #payment-message {
   color: rgb(105, 115, 134);
@@ -2184,15 +2182,6 @@ button:disabled {
   font-size: 24px;
 }
 
-@media (max-width: 768px) {
-  .speaker-item {
-    /* max-height: 435px; */
-    min-height: 435px;
-    height: 100%;
-    object-fit: cover;
-  }
-}
-
 @media (max-width: 1200px) {
   .speaker-collection-list {
     grid-template-columns: 1fr 1fr;
@@ -2201,7 +2190,9 @@ button:disabled {
 
 /* Hasta 768px */
 @media (max-width: 768px) {
-  .speaker-item {
+  .speaker-item,
+  .dr-fermin {
+    min-height: 100%;
     height: 100%;
   }
 
@@ -2242,7 +2233,8 @@ button:disabled {
 
 /* De 1025px hasta 1200px */
 @media (min-width: 1025px) and (max-width: 1199px) {
-  .speaker-item {
+  .speaker-item,
+  .dr-fermin {
     height: 500px;
   }
 
@@ -2259,7 +2251,8 @@ button:disabled {
 
 /* A partir de 1201px hasta tamaños más grandes */
 @media (min-width: 1200px) {
-  .speaker-item {
+  .speaker-item,
+  .dr-fermin {
     height: 435px;
   }
 }
@@ -2665,7 +2658,7 @@ body
 }
 
 /* Media Queries */
-@media (min-width: 600px) {
+@media (min-width: 400px) {
   .slide img {
     padding: 30px; /* Add padding inside the image */
   }
@@ -2790,6 +2783,9 @@ body
   .union-grid {
     grid-template-columns: repeat(2, 1fr);
   }
+  .faq-collection-list {
+    grid-row-gap: 1.5rem;
+  }
 }
 
 .pagos {
@@ -2817,12 +2813,9 @@ body
   transform: translateY(-100%);
 }
 
-
-
 .hidden {
   display: none;
 }
-
 
 .close-button {
   margin: 0;
@@ -2830,12 +2823,45 @@ body
   padding: 0;
   border-radius: 0.6rem;
   width: 50px;
-  height:50px;
+  height: 50px;
   position: absolute;
   top: 10px;
   right: 10px;
   font-size: 24px;
   color: white; /* Color negro para la 'X' */
   transform: translateX(-400%); /* Mover la 'X' */
+}
 
+@media (max-width: 550px) {
+  .faqsMovil,
+  .faq-collection-list {
+    max-width: 90%;
+    margin: 0 10px;
+  }
+
+  #faq {
+    width: 95%;
+    margin: 0 10px;
+  }
+  .text-bio {
+    padding: 2px;
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 500px) {
+  .section-home-faq,
+  .slider-img {
+    width: 90%;
+  }
+
+  .faq-collection-list {
+    margin: 0 10px;
+  }
+}
+
+@media (min-width: 120ppx) {
+  .dr-fermin {
+    min-height: 435px;
+  }
 }
