--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2574,7 +2574,7 @@ body
 }
 
 .slider-container {
-  margin: 10% auto;
+  margin: 1rem auto;
   position: relative;
   width: 100%;
   height: 100%;
@@ -2582,6 +2582,12 @@ body
   justify-content: center;
   align-items: center;
   overflow: hidden;
+}
+
+@media (min-width: 1024px) {
+  .slider-container {
+    margin: 5rem auto;
+  }
 }
 
 .background-image {
@@ -2617,13 +2623,20 @@ body
 
 .slide img {
   width: 100%;
-  height: auto;
-  background-color: #f4f4f6;
-  border-radius: 20px; /* Rounded corners */
-  box-sizing: border-box;
-  padding: 77px; /* Add padding inside the image */
+  height: auto; /* Ajustar la altura automáticamente */
+  object-fit: cover; /* Cubre el contenedor de la imagen sin distorsionarla */
+  object-position: center; /* Centra la imagen en el contenedor */
 }
 
+/* Media query para dispositivos móviles */
+@media (max-width: 768px) {
+  .slide img {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    object-position: center;
+  }
+}
 .nav-button {
   position: absolute;
   top: 50%;
@@ -2839,10 +2852,6 @@ body
     margin: 0 10px;
   }
 
-  #faq {
-    width: 95%;
-    margin: 0 10px;
-  }
   .text-bio {
     padding: 2px;
     font-size: 14px;
@@ -2850,11 +2859,6 @@ body
 }
 
 @media (max-width: 500px) {
-  .section-home-faq,
-  .slider-img {
-    width: 90%;
-  }
-
   .faq-collection-list {
     margin: 0 10px;
   }
@@ -2876,15 +2880,6 @@ body
     height: 410px;
   }
 
-  .section-home-faq,
-  .slider-img {
-    width: 47%;
-  }
-
-  #faq {
-    width: 45%;
-    margin: 0 10px;
-  }
   .text-bio {
     padding: 2px;
     font-size: 14px;
@@ -2938,11 +2933,89 @@ body
   }
 }
 
+/* seccion  */
+
+.conferencista-titulo {
+  font-weight: 450;
+}
+
+.agenda-list {
+  display: grid;
+  grid-template-rows: auto auto;
+  grid-template-columns: 1fr;
+  grid-column-gap: 1rem;
+  grid-row-gap: 1rem;
+  grid-auto-columns: 1fr;
+}
+
+.agenda-item {
+  display: grid;
+  grid-template-rows: auto;
+  grid-template-columns: 0.4fr 1fr;
+  grid-auto-columns: 1fr;
+  grid-column-gap: 2rem;
+  background-color: #f4f4f6;
+  border-radius: 0.6rem;
+  grid-row-gap: 2rem;
+  padding: 3rem;
+  position: relative;
+  overflow: hidden;
+}
+
+@media (max-width: 500px) {
+  .agenda-item {
+    padding: 4rem;
+  }
+
+  .agenda-content,
+  .agenda-content2 {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+  }
+}
+
+.agenda-time {
+  padding-top: 0.2rem;
+}
+
+.agenda-content,
+.additional-info {
+  transition: opacity 0.5s ease, transform 1s ease;
+}
+
+.additional-info {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 2rem;
+  box-sizing: border-box;
+  opacity: 0;
+  background: #f4f4f6;
+  transform: translateX(-100%);
+}
+
+.agenda-item:hover .agenda-content {
+  opacity: 0;
+  transform: translateX(100%);
+}
+
+.agenda-item:hover .additional-info {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+h3 {
+  margin: 0;
+}
+
+/* fin de seccion */
 /* footer */
 
 .important {
-  text-align: center;
-  max-width: 1000px;
+  text-align: start;
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 20px;
@@ -3018,4 +3091,8 @@ body
   .links-footer {
     margin: 0;
   }
+}
+
+#faq > div {
+  margin: 0 auto;
 }
